creazione DB per le categorie

--- a/app/src/main/res/layout/activity_registra_poi.xml
+++ b/app/src/main/res/layout/activity_registra_poi.xml
@@ -29,8 +29,8 @@
     <com.google.android.gms.maps.MapView
         android:id="@+id/mapView"
         android:layout_width="match_parent"
-        android:layout_height="500dp"
-
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@+id/button_conferma"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView_descrizione" />
