--- a/app/src/debug/res/values/google_maps_api.xml
+++ b/app/src/debug/res/values/google_maps_api.xml
@@ -1,24 +1,3 @@
 <resources>
-    <!--
-    TODO: Before you run your application, you need a Google Maps API key.
-
-    To get one, follow this link, follow the directions and press "Create" at the end:
-
-    https://console.developers.google.com/flows/enableapi?apiid=maps_android_backend&keyType=CLIENT_SIDE_ANDROID&r=EC:0A:56:0F:76:79:BB:F7:56:F7:F1:DD:4D:CE:51:CC:2A:40:20:49%3Bcom.example.mypoi
-
-    You can also add your credentials to an existing key, using these values:
-
-    Package name:
-    com.example.mypoi
-
-    SHA-1 certificate fingerprint:
-    EC:0A:56:0F:76:79:BB:F7:56:F7:F1:DD:4D:CE:51:CC:2A:40:20:49
-
-    Alternatively, follow the directions here:
-    https://developers.google.com/maps/documentation/android/start#get-key
-
-    Once you have your key (it starts with "AIza"), replace the "google_maps_key"
-    string in this file.
-    -->
-    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">YOUR_KEY_HERE</string>
+    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyA3y-m26IQzhzZ9B9vdhg4idVEg8Afk3gQ</string>
 </resources>
