--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,11 +15,11 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <androidx.recyclerview.widget.RecyclerView
+        <ListView
             android:id="@+id/listaPosizioni"
             android:layout_width="match_parent"
             android:layout_height="match_parent" >
-        </androidx.recyclerview.widget.RecyclerView>
+        </ListView>
     </LinearLayout>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
