--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,8 +18,7 @@
         <ListView
             android:id="@+id/listaPosizioni"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" >
-        </ListView>
+            android:layout_height="match_parent"></ListView>
     </LinearLayout>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
