implementato modifica categorie

--- a/app/src/main/res/layout/activity_aggiungi_categoria.xml
+++ b/app/src/main/res/layout/activity_aggiungi_categoria.xml
@@ -1,20 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="16dp"
-    tools:context=".ModificaCategorieActivity">
-
-    <ListView
-        android:id="@+id/lista_categorie"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="0.8">
-
-    </ListView>
+    tools:context=".AggiungiCategoria">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -26,16 +16,16 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/textViewModificaCat"
+            android:id="@+id/textViewAggiungiCatAdd"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/modifica_la_categoria"
+            android:text="@string/aggiungi_una_categoria"
             android:layout_marginBottom="6dp"
             android:textSize="28sp"
             android:textStyle="bold" />
 
         <EditText
-            android:id="@+id/editTextModificaCat"
+            android:id="@+id/editTextAggiungiCat"
             android:layout_width="match_parent"
             android:layout_height="63dp"
             android:layout_marginBottom="6dp"
@@ -43,18 +33,12 @@
             android:inputType="text" />
 
         <Button
-            android:id="@+id/buttonSalvaCat"
+            android:id="@+id/buttonSalvaCatAdd"
             android:layout_width="match_parent"
             android:layout_height="62dp"
             android:layout_marginTop="6dp"
             android:layout_marginBottom="6dp"
-            android:text="@string/salva_le_modifiche" />
+            android:text="Salva la categoria" />
 
-        <Button
-            android:id="@+id/buttonEliminaCat"
-            android:layout_width="match_parent"
-            android:layout_height="62dp"
-            android:text="@string/elimina_la_categoria" />
     </LinearLayout>
-
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
