--- a/app/src/main/res/layout/activity_aggiungi_categoria.xml
+++ b/app/src/main/res/layout/activity_aggiungi_categoria.xml
@@ -4,6 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#F5F5F5"
+    android:padding="8dp"
     tools:context=".AggiungiCategoria">
 
     <LinearLayout
@@ -21,7 +23,7 @@
             android:layout_height="wrap_content"
             android:text="@string/aggiungi_una_categoria"
             android:layout_marginBottom="6dp"
-            android:textSize="28sp"
+            android:textSize="24sp"
             android:textStyle="bold" />
 
         <EditText
